{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 188,
  "lineage": "0f6751c7-51e3-03cb-a737-6e2d309d29ba",
  "resources": [
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:internet-gateway/igw-091259c37aa17e075",
            "id": "igw-091259c37aa17e075",
            "owner_id": "095698008274",
            "tags": {
              "Name": "avizva_IG"
            },
            "tags_all": {
              "Name": "avizva_IG"
            },
            "vpc_id": "vpc-01d068cba8131534b"
          },
          "dependencies": [
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:route-table/rtb-0cb404f5282868b7f",
            "id": "rtb-0cb404f5282868b7f",
            "owner_id": "095698008274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091259c37aa17e075",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "avizva_RT"
            },
            "tags_all": {
              "Name": "avizva_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d068cba8131534b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.avizva.aws_internet_gateway.default",
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b8db1a382433eb",
            "route_table_id": "rtb-0cb404f5282868b7f",
            "subnet_id": "subnet-02b9b6373af4f0e61"
          },
          "dependencies": [
            "module.avizva.aws_internet_gateway.default",
            "module.avizva.aws_route_table.terraform-public",
            "module.avizva.aws_subnet.subnet1-public",
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0267c29bdcac49c96",
            "route_table_id": "rtb-0cb404f5282868b7f",
            "subnet_id": "subnet-0457b5c6c3f09c101"
          },
          "dependencies": [
            "module.avizva.aws_internet_gateway.default",
            "module.avizva.aws_route_table.terraform-public",
            "module.avizva.aws_subnet.subnet2-public",
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01681778dd206c978",
            "route_table_id": "rtb-0cb404f5282868b7f",
            "subnet_id": "subnet-0eb56ab10d4ebc6d9"
          },
          "dependencies": [
            "module.avizva.aws_internet_gateway.default",
            "module.avizva.aws_route_table.terraform-public",
            "module.avizva.aws_subnet.subnet3-public",
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:security-group/sg-0a37b861262b9d487",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a37b861262b9d487",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "095698008274",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d068cba8131534b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-02b9b6373af4f0e61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b9b6373af4f0e61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avizva_SN1"
            },
            "tags_all": {
              "Name": "avizva_SN1"
            },
            "vpc_id": "vpc-01d068cba8131534b"
          },
          "dependencies": [
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-0457b5c6c3f09c101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0457b5c6c3f09c101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avizva_SN2"
            },
            "tags_all": {
              "Name": "avizva_SN2"
            },
            "vpc_id": "vpc-01d068cba8131534b"
          },
          "dependencies": [
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-0eb56ab10d4ebc6d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb56ab10d4ebc6d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "avizva_SN3"
            },
            "tags_all": {
              "Name": "avizva_SN3"
            },
            "vpc_id": "vpc-01d068cba8131534b"
          },
          "dependencies": [
            "module.avizva.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.avizva",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:vpc/vpc-01d068cba8131534b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0b1c99f596d7a949c",
            "default_route_table_id": "rtb-00cbf86cbb622feb2",
            "default_security_group_id": "sg-07c3538245ab8ffc9",
            "dhcp_options_id": "dopt-07a31cb5723e382b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01d068cba8131534b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cbf86cbb622feb2",
            "owner_id": "095698008274",
            "tags": {
              "Name": "avizva",
              "Owner": "Venkat",
              "environment": "Dev"
            },
            "tags_all": {
              "Name": "avizva",
              "Owner": "Venkat",
              "environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.capec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:095698008274:instance/i-05f49be29809ac487",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f49be29809ac487",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d2dd0c7a6bf57d4",
            "private_dns": "ip-18-0-1-244.ec2.internal",
            "private_ip": "18.0.1.244",
            "public_dns": "ec2-34-201-64-171.compute-1.amazonaws.com",
            "public_ip": "34.201.64.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a0fedc9c36f5598",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cbd5fd26214bcc9",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "capServer1",
              "Owner": "Sree"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "capServer1",
              "Owner": "Sree"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e49f1072a0e2c46"
            ]
          },
          "dependencies": [
            "module.capgemini.aws_security_group.allow_all",
            "module.capgemini.aws_subnet.subnet1-public",
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:internet-gateway/igw-053a7f613924a41a1",
            "id": "igw-053a7f613924a41a1",
            "owner_id": "095698008274",
            "tags": {
              "Name": "capgemini_IG"
            },
            "tags_all": {
              "Name": "capgemini_IG"
            },
            "vpc_id": "vpc-042a025b520e40be9"
          },
          "dependencies": [
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:route-table/rtb-07eaca216d290f885",
            "id": "rtb-07eaca216d290f885",
            "owner_id": "095698008274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053a7f613924a41a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capgemini_RT"
            },
            "tags_all": {
              "Name": "capgemini_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-042a025b520e40be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.capgemini.aws_internet_gateway.default",
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000085aa0327c526f",
            "route_table_id": "rtb-07eaca216d290f885",
            "subnet_id": "subnet-09cbd5fd26214bcc9"
          },
          "dependencies": [
            "module.capgemini.aws_internet_gateway.default",
            "module.capgemini.aws_route_table.terraform-public",
            "module.capgemini.aws_subnet.subnet1-public",
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0759a6a4e2cd6d785",
            "route_table_id": "rtb-07eaca216d290f885",
            "subnet_id": "subnet-05f5d4736806a705a"
          },
          "dependencies": [
            "module.capgemini.aws_internet_gateway.default",
            "module.capgemini.aws_route_table.terraform-public",
            "module.capgemini.aws_subnet.subnet2-public",
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2f6474f3f2b964c",
            "route_table_id": "rtb-07eaca216d290f885",
            "subnet_id": "subnet-0874160dbab218b86"
          },
          "dependencies": [
            "module.capgemini.aws_internet_gateway.default",
            "module.capgemini.aws_route_table.terraform-public",
            "module.capgemini.aws_subnet.subnet3-public",
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:security-group/sg-05e49f1072a0e2c46",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e49f1072a0e2c46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "095698008274",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042a025b520e40be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-09cbd5fd26214bcc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "18.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cbd5fd26214bcc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capgemini_SN1"
            },
            "tags_all": {
              "Name": "capgemini_SN1"
            },
            "vpc_id": "vpc-042a025b520e40be9"
          },
          "dependencies": [
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-05f5d4736806a705a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "18.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f5d4736806a705a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capgemini_SN2"
            },
            "tags_all": {
              "Name": "capgemini_SN2"
            },
            "vpc_id": "vpc-042a025b520e40be9"
          },
          "dependencies": [
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-0874160dbab218b86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "18.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874160dbab218b86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capgemini_SN3"
            },
            "tags_all": {
              "Name": "capgemini_SN3"
            },
            "vpc_id": "vpc-042a025b520e40be9"
          },
          "dependencies": [
            "module.capgemini.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.capgemini",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:vpc/vpc-042a025b520e40be9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "18.0.0.0/16",
            "default_network_acl_id": "acl-08f804b65a4b9762f",
            "default_route_table_id": "rtb-0488501663fc041ba",
            "default_security_group_id": "sg-035445190a425e836",
            "dhcp_options_id": "dopt-07a31cb5723e382b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-042a025b520e40be9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0488501663fc041ba",
            "owner_id": "095698008274",
            "tags": {
              "Name": "capgemini",
              "Owner": "Venkat",
              "environment": "Dev"
            },
            "tags_all": {
              "Name": "capgemini",
              "Owner": "Venkat",
              "environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:internet-gateway/igw-045492c961ef7a397",
            "id": "igw-045492c961ef7a397",
            "owner_id": "095698008274",
            "tags": {
              "Name": "infosys_IG"
            },
            "tags_all": {
              "Name": "infosys_IG"
            },
            "vpc_id": "vpc-01a1a7d0e1f9084de"
          },
          "dependencies": [
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:route-table/rtb-0ccb61b36169f26aa",
            "id": "rtb-0ccb61b36169f26aa",
            "owner_id": "095698008274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045492c961ef7a397",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infosys_RT"
            },
            "tags_all": {
              "Name": "infosys_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1a7d0e1f9084de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infosys.aws_internet_gateway.default",
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e6ad10564aac031",
            "route_table_id": "rtb-0ccb61b36169f26aa",
            "subnet_id": "subnet-0383bdc1ae86708f8"
          },
          "dependencies": [
            "module.infosys.aws_internet_gateway.default",
            "module.infosys.aws_route_table.terraform-public",
            "module.infosys.aws_subnet.subnet1-public",
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5bcff0967515387",
            "route_table_id": "rtb-0ccb61b36169f26aa",
            "subnet_id": "subnet-0bce7373acb332da5"
          },
          "dependencies": [
            "module.infosys.aws_internet_gateway.default",
            "module.infosys.aws_route_table.terraform-public",
            "module.infosys.aws_subnet.subnet2-public",
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c516f314b5b587c1",
            "route_table_id": "rtb-0ccb61b36169f26aa",
            "subnet_id": "subnet-0308af0b37f4bda46"
          },
          "dependencies": [
            "module.infosys.aws_internet_gateway.default",
            "module.infosys.aws_route_table.terraform-public",
            "module.infosys.aws_subnet.subnet3-public",
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:security-group/sg-09c5015b0d6394d00",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c5015b0d6394d00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "095698008274",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a1a7d0e1f9084de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-0383bdc1ae86708f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "19.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0383bdc1ae86708f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infosys_SN1"
            },
            "tags_all": {
              "Name": "infosys_SN1"
            },
            "vpc_id": "vpc-01a1a7d0e1f9084de"
          },
          "dependencies": [
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-0bce7373acb332da5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "19.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bce7373acb332da5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infosys_SN2"
            },
            "tags_all": {
              "Name": "infosys_SN2"
            },
            "vpc_id": "vpc-01a1a7d0e1f9084de"
          },
          "dependencies": [
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:subnet/subnet-0308af0b37f4bda46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "19.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0308af0b37f4bda46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095698008274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infosys_SN3"
            },
            "tags_all": {
              "Name": "infosys_SN3"
            },
            "vpc_id": "vpc-01a1a7d0e1f9084de"
          },
          "dependencies": [
            "module.infosys.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.infosys",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095698008274:vpc/vpc-01a1a7d0e1f9084de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "19.0.0.0/16",
            "default_network_acl_id": "acl-04378914cfa083925",
            "default_route_table_id": "rtb-0ea3bcc8fd509e8da",
            "default_security_group_id": "sg-0b360cf76b4970c0b",
            "dhcp_options_id": "dopt-07a31cb5723e382b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01a1a7d0e1f9084de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea3bcc8fd509e8da",
            "owner_id": "095698008274",
            "tags": {
              "Name": "infosys",
              "Owner": "Venkat",
              "environment": "Dev"
            },
            "tags_all": {
              "Name": "infosys",
              "Owner": "Venkat",
              "environment": "Dev"
            }
          }
        }
      ]
    }
  ]
}